added updates to eks and karpenter

--- a/modules/kubernetes_node_pool/aws_karpenter/facets.yaml
+++ b/modules/kubernetes_node_pool/aws_karpenter/facets.yaml
@@ -223,6 +223,11 @@ inputs:
     - helm
     - kubernetes
     - kubernetes-alpha
+  network_details:
+    type: '@outputs/aws_vpc'
+    displayName: VPC Network
+    description: VPC network details for node placement
+    optional: false
 outputs:
   default:
     type: '@outputs/kubernetes_node_pool'
