--- a/modules/cloud_account/azure/0.1/facets.yaml
+++ b/modules/cloud_account/azure/0.1/facets.yaml
@@ -1,5 +1,5 @@
 intent: "cloud_account"
-alias-flavors: ["default"]
+alias-flavors: [ "default" ]
 flavor: azure
 lifecycle: ENVIRONMENT
 version: "0.1"
@@ -16,7 +16,7 @@ outputs:
     providers:
       azurerm:
         source: hashicorp/azurerm
-        version: 2.52.0
+        version: 2.99.0
         attributes:
           features: {}
           subscription_id: attributes.subscription_id
@@ -26,6 +26,24 @@ outputs:
       azurerm3:
         source: hashicorp/azurerm3
         version: 3.52.0
+        attributes:
+          features: {}
+          subscription_id: attributes.subscription_id
+          client_id: attributes.client_id
+          client_secret: attributes.client_secret
+          tenant_id: attributes.tenant_id
+      azurerm3-105-0:
+        source: hashicorp/azurerm3-105-0
+        version: 3.105.0
+        attributes:
+          features: {}
+          subscription_id: attributes.subscription_id
+          client_id: attributes.client_id
+          client_secret: attributes.client_secret
+          tenant_id: attributes.tenant_id
+      azurerm3-116-0:
+        source: hashicorp/azurerm3-116-0
+        version: 3.116.0
         attributes:
           features: {}
           subscription_id: attributes.subscription_id
