correct regex and version

--- a/modules/cloud_account/aws/0.2/facets.yaml
+++ b/modules/cloud_account/aws/0.2/facets.yaml
@@ -1,6 +1,6 @@
 intent: cloud_account
 flavor: aws
-version: "0.1"
+version: "0.2"
 clouds: [ aws ]
 description: A cloud account is a user account used to access and manage services provided by a cloud computing service provider.
 spec:
@@ -18,9 +18,9 @@ spec:
       title: Role ARN
       description: The Amazon Resource Name (ARN) of the role to assume.
       type: string
-      pattern: '^arn:aws:iam::[0-9]{12}:role/[\w+=,.@-]$+' # regex pattern for role ARN
-      x-ui-placeholder: "Eg: arn:aws:iam::123456789012:role/role_name" # placeholder for the role ARN
-      x-ui-error-message: 'Value did not match pattern "^arn:aws:iam::[0-9]{12}:role/[\w+=,.@-]$+". Eg: arn:aws:iam::123456789012:role/role_name'
+      pattern: '^(arn:aws:iam::(\d{12}|aws):role\/[A-Za-z0-9+=,.@\-_]+$' # regex pattern for role ARN
+      x-ui-placeholder: 'Eg: arn:aws:iam::123456789012:role/role_name' # placeholder for the role ARN
+      x-ui-error-message: 'Value did not match pattern "^(arn:aws:iam::(\d{12}|aws):role\/[A-Za-z0-9+=,.@\-_]+". Eg: arn:aws:iam::123456789012:role/role_name'
       x-ui-override-disable: true # disables the override option in UI
     role_session_name:
       title: Role Session Name
@@ -67,7 +67,7 @@ outputs:
 sample:
   kind: cloud_account
   flavor: aws
-  version: "0.1"
+  version: "0.2"
   disabled: true # always set this to true to disable the sample
   spec:
     type: object
