added region select with new api endpoint

--- a/modules/network/aws_vpc/0.2/facets.yaml
+++ b/modules/network/aws_vpc/0.2/facets.yaml
@@ -20,10 +20,11 @@ spec:
       title: AWS Region
       description: AWS region where the VPC will be created
       x-ui-api-source:
-        endpoint: /cc-ui/v1/dropdown/aws/regions
+        endpoint: /cc-ui/v1/dropdown/aws/regions-v2
         method: GET
-        labelKey: regions
+        labelKey: region
         valueKey: region
+        path: regions
     availability_zones:
       type: array
       title: Availability Zones
