Revert "fix in cm02"
This reverts commit d13f789679d25b89f390a42bd3497704f5482a73.

--- a/modules/config_map/k8s/0.2/facets.yaml
+++ b/modules/config_map/k8s/0.2/facets.yaml
@@ -18,7 +18,7 @@ spec:
       x-ui-yaml-editor: true
       x-ui-placeholder: "Enter the value of the config. Eg. key: config_value"
     json_data:
-      title: Json Data
+      title: Json Data`1`
       type: object
       description: "Enter a valid data for config-map in JSON format"
       x-ui-textarea: true
