--- a/modules/google_cloud_storage/default/0.1/facets.yaml
+++ b/modules/google_cloud_storage/default/0.1/facets.yaml
@@ -2,6 +2,9 @@ intent: google_cloud_storage
 flavor: default
 version: '0.1'
 description: Adds Storage module of flavor Google Cloud Storage
+outputs:
+  default:
+    type: '@output/google_cloud_storage_bucket'
 clouds:
   - gcp
 spec:
