--- a/modules/network/aws_vpc/0.2/facets.yaml
+++ b/modules/network/aws_vpc/0.2/facets.yaml
@@ -1,8 +1,7 @@
 intent: network
 flavor: aws_vpc
 version: '0.2'
-description: Creates an AWS VPC with configurable public subnets and EKS private subnets
-  across availability zones
+description: Creates an AWS VPC with configurable public subnets, private subnets, and database subnets across availability zones
 clouds:
 - aws
 spec:
@@ -19,36 +18,35 @@ spec:
       type: string
       title: AWS Region
       description: AWS region where the VPC will be created
-      enum:
-      - us-east-1
-      - us-east-2
-      - us-west-1
-      - us-west-2
-      - eu-west-1
-      - eu-west-2
-      - eu-west-3
-      - eu-central-1
-      - eu-north-1
-      - ap-southeast-1
-      - ap-southeast-2
-      - ap-northeast-1
-      - ap-northeast-2
-      - ap-south-1
-      - ca-central-1
-      - sa-east-1
-      x-ui-overrides-only: true
+      x-ui-api-source:
+        endpoint: /cc-ui/v1/dropdown/aws/regions-v2
+        method: GET
+        labelKey: region
+        valueKey: region
+        path: regions
     availability_zones:
       type: array
       title: Availability Zones
       description: List of availability zones to use for subnets
+      x-ui-api-source:
+        endpoint: /cc-ui/v1/dropdown/aws/region/{{region}}/availability-zones
+        dynamicProperties:
+          region:
+            key: region
+            lookup: label
+        method: GET
+      x-ui-select-min: 2
+      x-ui-select-max: 4
+      x-ui-multi-select: true
+      x-ui-disable-tooltip: No AZs Found for the Region selected
+      x-ui-typeable: true
+      x-ui-override-disable: true
       items:
         type: string
         pattern: ^[a-z]{2}-[a-z]+-[0-9][a-z]$
         x-ui-error-message: Availability zone must be in format like 'us-east-1a'
       minItems: 2
       maxItems: 4
-      x-ui-overrides-only: true
-      x-ui-override-disable: true
     public_subnets:
       type: object
       title: Public Subnets Configuration
@@ -74,14 +72,21 @@ spec:
       required:
       - count_per_az
       - subnet_size
-    eks_subnets:
+    private_subnets:
       type: object
-      title: EKS Private Subnets Configuration
+      title: Private Subnets Configuration
       properties:
+        count_per_az:
+          type: number
+          title: Private Subnets per AZ
+          description: Number of private subnets to create in each availability zone
+          minimum: 0
+          maximum: 3
+          default: 1
         subnet_size:
           type: string
-          title: EKS Subnet Size
-          description: Number of IP addresses in each EKS private subnet
+          title: Private Subnet Size
+          description: Number of IP addresses in each private subnet
           enum:
           - '256'
           - '512'
@@ -90,13 +95,34 @@ spec:
           - '4096'
           - '8192'
           default: '1024'
-        cluster_name:
-          type: string
-          title: EKS Cluster Name
-          description: Name of the EKS cluster for subnet tagging
       required:
+      - count_per_az
       - subnet_size
-      - cluster_name
+    database_subnets:
+      type: object
+      title: Database Subnets Configuration
+      description: Configure dedicated subnets for database resources
+      properties:
+        count_per_az:
+          type: number
+          title: Database Subnets per AZ
+          description: Number of database subnets to create in each availability zone
+          minimum: 0
+          maximum: 3
+          default: 1
+        subnet_size:
+          type: string
+          title: Database Subnet Size
+          description: Number of IP addresses in each database subnet
+          enum:
+          - '256'
+          - '512'
+          - '1024'
+          - '2048'
+          default: '256'
+      required:
+      - count_per_az
+      - subnet_size
     nat_gateway:
       type: object
       title: NAT Gateway Configuration
@@ -104,8 +130,7 @@ spec:
         strategy:
           type: string
           title: NAT Gateway Strategy
-          description: Choose whether to create one NAT Gateway or one per availability
-            zone
+          description: Choose whether to create one NAT Gateway or one per availability zone
           enum:
           - single
           - per_az
@@ -115,8 +140,7 @@ spec:
     vpc_endpoints:
       type: object
       title: VPC Endpoints Configuration
-      description: Configure VPC endpoints for AWS services to reduce data transfer
-        costs and improve security
+      description: Configure VPC endpoints for AWS services to reduce data transfer costs and improve security
       x-ui-toggle: true
       properties:
         enable_s3:
@@ -127,8 +151,7 @@ spec:
         enable_dynamodb:
           type: boolean
           title: Enable DynamoDB VPC Endpoint
-          description: Create a Gateway endpoint for Amazon DynamoDB (no additional
-            charges)
+          description: Create a Gateway endpoint for Amazon DynamoDB (no additional charges)
           default: true
         enable_ecr_api:
           type: boolean
@@ -138,8 +161,7 @@ spec:
         enable_ecr_dkr:
           type: boolean
           title: Enable ECR Docker VPC Endpoint
-          description: Create an Interface endpoint for Amazon ECR Docker registry
-            (charges apply)
+          description: Create an Interface endpoint for Amazon ECR Docker registry (charges apply)
           default: true
         enable_eks:
           type: boolean
@@ -154,8 +176,7 @@ spec:
         enable_ssm:
           type: boolean
           title: Enable SSM VPC Endpoint
-          description: Create an Interface endpoint for AWS Systems Manager (charges
-            apply)
+          description: Create an Interface endpoint for AWS Systems Manager (charges apply)
           default: true
         enable_ssm_messages:
           type: boolean
@@ -180,8 +201,7 @@ spec:
         enable_monitoring:
           type: boolean
           title: Enable CloudWatch Monitoring VPC Endpoint
-          description: Create an Interface endpoint for CloudWatch Monitoring (charges
-            apply)
+          description: Create an Interface endpoint for CloudWatch Monitoring (charges apply)
           default: false
         enable_sts:
           type: boolean
@@ -198,7 +218,8 @@ spec:
   - region
   - availability_zones
   - public_subnets
-  - eks_subnets
+  - private_subnets
+  - database_subnets
   - nat_gateway
 sample:
   kind: network
@@ -208,9 +229,12 @@ sample:
     public_subnets:
       count_per_az: 1
       subnet_size: '256'
-    eks_subnets:
+    private_subnets:
+      count_per_az: 1
       subnet_size: '1024'
-      cluster_name: my-eks-cluster
+    database_subnets:
+      count_per_az: 1
+      subnet_size: '256'
     nat_gateway:
       strategy: single
     vpc_endpoints:
@@ -230,7 +254,7 @@ sample:
       enable_lambda: false
 outputs:
   default:
-    type: '@outputs/aws_vpc'
+    type: '@facets/aws-vpc-details'
 iac:
   validated_files:
   - variables.tf
