changes in statefulset yaml

--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -842,6 +842,11 @@ spec:
                 to be unavailable during disruption, this is pod disruption budget"
               x-ui-error-message: "Value doesn't match pattern, it should be number
                 ranging from 0 to 100 or 0% to 100%"
+    env:
+      title: Environment Variables
+      description: Map of environment variables passed to the main container.
+      type: object
+      x-ui-yaml-editor: true
     init_containers:
       title: Init Containers
       description: Map of specialized containers that run before app containers in
@@ -1587,6 +1592,7 @@ spec:
   - persistent_volume_claims
   - runtime
   - release
+  - env
   - init_containers
   - sidecars
   - cloud_permissions
