--- a/modules/config_map/k8s/0.3/facets.yaml
+++ b/modules/config_map/k8s/0.3/facets.yaml
@@ -17,7 +17,7 @@ spec:
       patternProperties:
         "^[a-zA-Z0-9_.-]*$":
           title: Data Object Block
-          description: something
+          description: A block representing a key-value pair in the ConfigMap
           type: object
           properties:
             key:
