--- a/modules/dynamodb/default/0.2/facets.yaml
+++ b/modules/dynamodb/default/0.2/facets.yaml
@@ -4,17 +4,61 @@ version: '0.2'
 description: Adds dynamodb - default flavor
 clouds:
 - aws
-- aws
+spec:
+  type: object
+  title: AWS DynamoDB
+  description: Specification of the AWS DynamoDB table resource intent
+  required:
+  - hash_key
+  properties:
+    hash_key:
+      type: string
+      title: Hash Key (Partition Key)
+      description: The attribute name to use as the hash (partition) key for the table
+      default: id
+    attributes:
+      type: object
+      title: Table Attributes
+      description: Define the attributes for the DynamoDB table
+      patternProperties:
+        ^[a-zA-Z0-9_-]+$:
+          type: object
+          properties:
+            name:
+              type: string
+              title: Attribute Name
+              description: The name of the attribute
+            type:
+              type: string
+              title: Attribute Type
+              description: The type of the attribute
+              x-ui-typeable: true
+              enum:
+              - S
+              - N
+              - B
+              default: S
+          required:
+          - name
+          - type
 sample:
-  $schema: https://facets-cloud.github.io/facets-schemas/schemas/dynamodb/dynamodb.schema.json
   kind: dynamodb
   flavor: default
+  disabled: false
   version: '0.2'
-  disabled: true
-  metadata: {}
+  metadata:
+    tags:
+      Environment: dev
+      Project: example
   spec:
+    hash_key: LockID
     attributes:
       key1:
         name: LockID
         type: S
-    hash_key: LockID
+      key2:
+        name: Timestamp
+        type: N
+      key3:
+        name: name
+        type: S
